--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node src/server.js",
-    "dev": "set NODE_ENV=dev && nodemon src/server.js"
+    "dev": "set NODE_ENV=dev && nodemon src/server.js -e js,hbs"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
+    "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "hbs": "^4.1.1",
     "method-override": "^3.0.0",
