--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.10.11",
     "nodemailer": "^6.4.14",
+    "nodemailer-express-handlebars": "^4.0.0",
     "nodemailer-mailgun-transport": "^2.0.1",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
